test/libsolidity/syntaxTests/code/code_keyword_in_function_params.sol
contract X{
    function foo(string code input) internal pure {
        string code test = input;
    }
}
// ----
// ParserError 2314: (36-40): Expected ',' but got 'code'
